--- a/client/partials/dashboard.html
+++ b/client/partials/dashboard.html
@@ -9,5 +9,5 @@
 <h5>Find Friend</h5><input type="text" ng-model ="filter_name">
 
 <ul>
-  <li ng-repeat = "friends in friend | filter:filter_name | orderBy: 'name'">({ friend.name }) - age {{ friend.age | number:0}}></li>
+  <li ng-repeat = "friend in friends | filter:filter_name | orderBy: 'name'">{{ friend.name }} - age {{ friend.age | number:0}}</li>
 </ul>
