--- a/client/partials/dashboard.html
+++ b/client/partials/dashboard.html
@@ -1,13 +1,13 @@
 <h1 id="correct_element">something right</h1>
-<h3>Add a new student!</h3>
+<h3>Add a new friends!</h3>
 <form>
-  Name: <input type="text" ng-model="new_friend.name">
-  Age: <input type="text" ng-model="new_friend.age">
+  <p>Name: </p> <input type="text" ng-model="new_friend.name">
+  <p> Age: </p> <input type="text" ng-model="new_friend.age">
   <input type="submit" value="add new friend" ng-click='addfriend()'>
 </form>
 
-<h5>Find Friend</h5><input type="text" ng-model ="filter_name">
+<h5>Find Friend: </h5><input type="text" ng-model ="filter_name">
 
   <div ng-repeat = "friend in friends | filter:filter_name | orderBy: 'name'">
-    <div>{{ friend.name }} - age {{ friend.age | number:0}}</div><input type="submit" value="Delete" ng-click='removefriend(friend._id)'>
+    <div>{{ friend.name }} - age {{ friend.age | number:0}}</div><input type="Submit" value="Delete" ng-click='removefriend(friend._id)'>
   </div>
